# AI-Engineer

./: .gitignore  README.md  pyproject.toml  test.py
ai-projects/: ...  main.py  pyproject.toml  test.sh
phase0/module0/: README.md  basicGit.md  isolate.md
phase0/module0/scripts/: helloRust  verify.py
phase0/module1/: README.md
phase0/module1/scripts/: api.py  api.ts  package.json
phase0/module2/: README.md
phase0/module3/: README.md
phase0/module4/: README.md
phase0/module5/: README.md
phase1/module0/: README.md  basicBash.md  isolate.md
phase1/module1/: README.md
phase1/module1/exercises/: bank.py  bmi.py  convertUnit.py  emailValid.py  fizzBuzz.py  inher.py  library.py  prime.py  revDict.py  reverseString.py  stats.py  sumTarget.py  top3.py  uniq.py  urlCheck.py  vector.py  vowels.py
phase1/module1/python/: advanced.md  basics.md  dataStructures.md  functions.md  oop.md
phase1/module2/: statistics.md  vector.md
