[project]
name = "ai-projects"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
torch = ["torch>=2.11.0", "torchvision>=0.18"]
llm = ["anthropic>=0.39", "openai>=1.50"]
